--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 			<!--=============== ======= ===============-->
 			<section id="sidebar">
 				<a href="https://www.linkedin.com/in/alexanderlyakishev" target="_blank">
-					<img class="sidebarIcon icon" src="icons/LinkedIn.png"/>
+					<img class="sidebarIcon icon" src="/assets/icons/linkedin_logo.png"/>
 				</a>
 				<a href="https://www.github.com/AlexLyakishev" target="_blank">
-					<img class="sidebarIcon icon" src="icons/Github.png"/>
+					<img class="sidebarIcon icon" src="/assets/icons/github_logo.png"/>
 				</a>
 			</section>
 			
@@ -62,9 +62,9 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						<div class="spacer"></div>
 						<div class="platform">
 							<div class="platformImage">
-								<div id="platform_background_swerve" class="background"></div>
+								<div id="platform_background_vfs" class="background"></div>
 							</div>
-							<p class="blockTitle">MDVFS Captain</p>
+							<p class="blockTitle">Captain - McGill Drone Design Team</p>
 							<div class="platformDescription">
 								<p class="largeText">McGill Drone and Vertical Flight Society</p>
 								<p class="smallText">Fall 2022 to Present</p>
@@ -78,9 +78,9 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						</div>
 						<div class="platform">
 							<div class="platformImage">
-								<div id="platform_background_soccer" class="background"></div>
+								<div id="platform_background_snowboard" class="background"></div>
 							</div>
-							<p class="blockTitle">Custom Snowboard</p>
+							<p class="blockTitle">Custom Snowboard Project</p>
 							<div class="platformDescription">
 								<p class="largeText">Custom Snowboard</p>
 								<p class="smallText">Fall 2024 to Present</p>
@@ -94,7 +94,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						</div>
 						<div class="platform">
 							<div class="platformImage">
-								<div id="platform_background_micromouse" class="background"></div>
+								<div id="platform_background_baja" class="background"></div>
 							</div>
 							<p class="blockTitle">Baja Subteam Lead</p>
 							<div class="platformDescription">
@@ -110,178 +110,17 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						</div>
 						<div class="platform">
 							<div class="platformImage">
-								<div id="platform_background_auto_flight" class="background"></div>
+								<div id="platform_background_inspira" class="background"></div>
 							</div>
 							<p class="blockTitle">InSpira Bioreactor</p>
 							<div class="platformDescription">
 								<p class="largeText">INSPIRA PBR NASAxCSA Deep Space Food Challenge Competitor</p>
 								<p class="smallText">Fall 2022 to Spring 2023</p>
-								<p class="mediumText">•	Used SolidWorks to create an optimal sensor layout and a 3D printed custom electronics enclosure for a maximally autonomous algae food production system for use on long-duration space missions</p>
+								<p class="mediumText">Used SolidWorks to create an optimal sensor layout and a 3D printed custom electronics enclosure for a maximally autonomous algae food production system for use on long-duration space missions</p>
 							</div>
 							<div class="linksBar">
 								<a href="https://reporter.mcgill.ca/mcgill-teams-put-prototypes-through-their-paces-in-deep-space-food-challenge/" target="_blank">
 									<span class="icon-newspaper"></span>
-								</a>
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_auto_boat" class="background"></div>
-							</div>
-							<p class="blockTitle">Autonomous Boat</p>
-							<div class="platformDescription">
-								<p class="largeText">Maritime Platform</p>
-								<p class="smallText">Spring 2017 to Summer 2017</p>
-								<p class="mediumText">Performed sensor data aquisition and integration, designed and integrated sensors packages and components, and converted autonomy code over to the ROS framework.</p>
-							</div>
-							<div class="linksBar">
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_yumi" class="background"></div>
-							</div>
-							<p class="blockTitle">ABB YuMi</p>
-							<div class="platformDescription">
-								<p class="largeText">ABB YuMi</p>
-								<p class="smallText">March 2016 to September 2016</p>
-								<p class="mediumText">Interfaces the YuMi ABB industrial robot with ROS and MoveIt! library and presented work to the President of ABB Switzerland.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://github.com/ethz-asl/yumi" target="_blank">
-									<span class="icon-github"></span>
-								</a>
-								<a href="https://www.youtube.com/watch?v=NM55aS-hmPk" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://www.youtube.com/watch?v=iwm0iYtpO94" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://www.facebook.com/eth/posts/1262436083767741%3A0" target="_blank">
-									<span class="icon-newspaper"></span>
-								</a>
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_dragon" class="background"></div>
-							</div>
-							<p class="blockTitle">Versatile Ground Robot</p>
-							<div class="platformDescription">
-								<p class="largeText">Versatile Ground Robot</p>
-								<p class="smallText">Fall 2016 to Spring 2017</p>
-								<p class="mediumText">Performed the chassis design, build, and integration with four other subsystem, designed and built the electronics, and programmed the robot.</p>
-							</div>
-							<div class="linksBar">
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_hyperloop" class="background"></div>
-							</div>
-							<p class="blockTitle">Drexel Hyperloop</p>
-							<div class="platformDescription">
-								<p class="largeText">Hyperloop Transportation Pod</p>
-								<p class="smallText">June 2015 to January 2017</p>
-								<p class="mediumText">I was primarily the sponsorship head and project manager for the Drexel Hyperloop team. Biggest accomplishment: raised $70,000.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://drexelhyperloopteam.com" target="_blank">
-									<span class="icon-desktop"></span>
-								</a>
-								<a href="https://www.facebook.com/DrexelHyperloop/" target="_blank">
-									<span class="icon-facebook"></span>
-								</a>
-								<a href="https://www.youtube.com/watch?v=PvUsGlRuNxU" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://www.facebook.com/drexelengineering/posts/10153526962432881" target="_blank">
-									<span class="icon-newspaper"></span>
-								</a>
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_robot_arm" class="background"></div>
-							</div>
-							<p class="blockTitle">Robot Arm</p>
-							<div class="platformDescription">
-								<p class="largeText">Cementitous Vessel Sprayer</p>
-								<p class="smallText">Summer 2014</p>
-								<p class="mediumText">As part of the STARS research program at Drexel, I developed the groundwork of an automated cementitius vessel spraying robot.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://www.youtube.com/watch?v=a4jy9IXZZiI" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/automated-manufacturing-of-cementitious-vessels" target="_blank">
-									<span class="icon-info"></span>
-								</a>
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_thor" class="background"></div>
-							</div>
-							<p class="blockTitle">THOR</p>
-							<div class="platformDescription">
-								<p class="largeText">Three Wheeled Omni-Wheeled Robot</p>
-								<p class="smallText">Fall 2014 to Spring 2015</p>
-								<p class="mediumText">I built the controller for Drexel ASME's three omni-wheeled robot for display purpose for promotion for the organization.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://www.youtube.com/watch?v=Vk-3F9g5KwI" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/thor---remote-controlled-robot" target="_blank">
-									<span class="icon-info"></span>
-								</a>
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_tdmr" class="background"></div>
-							</div>
-							<p class="blockTitle">2D Mapping Robot</p>
-							<div class="platformDescription">
-								<p class="largeText">2D Mapping Robot</p>
-								<p class="smallText">Spring 2014</p>
-								<p class="mediumText">My freshman design project involved building a 2D mapping mobile robot. I worked on this project with four other team members.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://sites.google.com/site/tauruschapter/research/taurus---freshman-engineering-design-iii---2014" target="_blank">
-									<span class="icon-desktop"></span>
-								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/research-and-projects/two-dimensional-mobile-robotic-mapping" target="_blank">
-									<span class="icon-info"></span>
-								</a>
-								<a href="http://du2014-grp940-07.blogspot.se/" target="_blank">
-									<span class="icon-blog"></span>
-								</a>
-								<a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxmYXdlbmdpbmVlcmluZ3BvcnRmb2xpb3xneDo0NzUxOTY5N2EyMTk2ZjAy" target="_blank">
-									<span class="icon-document"></span>
-								</a>
-							</div>
-						</div>
-						<div class="platform">
-							<div class="platformImage">
-								<div id="platform_background_hexcopter" class="background"></div>
-							</div>
-							<p class="blockTitle">Hexcopter</p>
-							<div class="platformDescription">
-								<p class="largeText">Hexcopter</p>
-								<p class="smallText">Winter and Spring 2014</p>
-								<p class="mediumText">I built and flew a hexcopter as part of the 2014 ASME Student Design Competition along with another team member who did the design work. We were third place.</p>
-							</div>
-							<div class="linksBar">
-								<a href="https://www.asme.org/events/competitions/student-design-competition" target="_blank">
-									<span class="icon-desktop"></span>
-								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-sdc" target="_blank">
-									<span class="icon-info"></span>
-								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/competitions/asme-student-design-competition-2015" target="_blank">
-									<span class="icon-info"></span>
 								</a>
 							</div>
 						</div>
@@ -292,69 +131,62 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 			<section id="page2" class="page">
 				<div>
 					<div id="contentPage2" class="center">
-						<div class="job">
-							<div class="jobImage">
-								<div id="job_background_ATL" class="background"></div>
-							</div>
-							<p class="blockTitle">Intern at Lockheed Martin</p>
-							<div class="jobDescription">
-								<p class="largeText">Lockheed Martin</p>
-								<p class="smallText">Robotics Engineer at ATL Robotics and Intelligent Systems Group</p>
-								<p class="smallText">March 2017 to September 2017</p>
-								<p class="mediumText">Performed full system design, development, and integration of robotics systems for platform development. 
-									Development work was done primarily in ROS for integration of sensors, developing visualizations, automation, and data analysis and processing. Worked primarily with unmanned maritime and aerial platforms.</p>
-							</div>
-							<div class="linksBar">
-							</div>
+						<div id="aboutMeDescription" class="black_out">
+							<p class="pageTitle">Work Experience</p>
 						</div>
+						<div class="spacer"></div>
 						<div class="job">
 							<div class="jobImage">
-								<div id="job_background_ASL" class="background"></div>
+								<div id="job_background_craftylayers" class="background"></div>
 							</div>
-							<p class="blockTitle">Intern at Autonomous Systems Lab ETHZ</p>
+							<p class="blockTitle">3D Printing Business Founder</p>
 							<div class="jobDescription">
-								<p class="largeText">Autonomous Systems Laboratory</p>
-								<p class="smallText">Robotics and Development Engineer at Swiss Federal Institute of Technology</p>
-								<p class="smallText">March 2016 to September 2016</p>
-								<p class="mediumText">Interfaced ABB YuMi robot with the MoveIt! software in ROS C++ to automate 
-									the kinematic and dynamic model and to integrate existing algorithms for path planning and controls. Integrated the Leap Motion sensor with YuMi in C++ for interactive manipulation. Worked with machine shop to develop a stand and a new attachment for YuMi. Presented work to the President of ABB Switzerland and his colleagues. All contributions are public on GitHub.</p>
+								<p class="largeText">Crafty Layers</p>
+								<p class="smallText">Founder - Crafty Layers: a 3D printing company</p>
+								<p class="smallText">May 2024 to Present</p>
+								<p class="mediumText">• Received government of Ontario Summer Company Award to start up my own 3D printing business</p>
+								<p class="mediumText">• Handled all aspects of running the company from accounting to design and manufacturing of products</p>
+								<p class="mediumText">• Gained experience in design for manufacturing, solving tool changing problem, efficient design, and 3D printing</p>
 							</div>
 							<div class="linksBar">
-								<a href="http://www.asl.ethz.ch/" target="_blank">
+								<a href="https://www.etsy.com/shop/CraftyLayers?ref=dashboard-header" target="_blank">
 									<span class="icon-desktop"></span>
-								</a>
-								<a href="https://github.com/ethz-asl/yumi" target="_blank">
-									<span class="icon-github"></span>
-								</a>
-								<a href="https://www.facebook.com/eth/posts/1262436083767741%3A0" target="_blank">
-									<span class="icon-newspaper"></span>
-								</a>
-								<a href="https://www.youtube.com/watch?v=NM55aS-hmPk" target="_blank">
-									<span class="icon-youtube"></span>
-								</a>
-								<a href="https://www.youtube.com/watch?v=iwm0iYtpO94" target="_blank">
-									<span class="icon-youtube"></span>
 								</a>
 							</div>
 						</div>
 						<div class="job">
 							<div class="jobImage">
-								<div id="job_background_PTW" class="background"></div>
+								<div id="job_background_ta" class="background"></div>
 							</div>
-							<p class="blockTitle">Intern at Production Technology West</p>
+							<p class="blockTitle">Teaching Assistant at McGill</p>
 							<div class="jobDescription">
-								<p class="largeText">Production Technology West</p>
-								<p class="smallText">Research Engineer at University West (Hogskolan Vast)</p>
-								<p class="smallText">September 2014 to March 2015</p>
-								<p class="mediumText">Developed algorithms to determine robustness of weld defect detection from
-									an IR camera with various light sources. Built a GUI in MATLAB to interface with algorithms to display defect locations to user. Developed tests to image defects on welds using an IR camera with various light sources in order to benchmark the defect detection algorithms. Designed and built a borescope for an IR camera to image welds inside of vanes.</p>
+								<p class="largeText">Teaching Assistant for COMP 202</p>
+								<p class="smallText">Undergraduate teaching assistant for intro to programming course</p>
+								<p class="smallText">August 2023 to April 2024</p>
+								<p class="mediumText">• Paid undergraduate Teaching Assistant position for entry-level computer science course with >600 students</p>
+								<p class="mediumText">• Responsible for leading office hours, answering discussion board questions, and reviewing course assignments</p>
 							</div>
 							<div class="linksBar">
-								<a href="http://www.hv.se/en/production-technology-west" target="_blank">
+								<a href="https://www.mcgill.ca/study/2024-2025/courses/comp-202" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
-								<a href="https://sites.google.com/site/fawengineeringportfolio/work-experience/university-west-ptc" target="_blank">
-									<span class="icon-info"></span>
+							</div>
+						</div>
+						<div class="job">
+							<div class="jobImage">
+								<div id="job_background_readylab" class="background"></div>
+							</div>
+							<p class="blockTitle">Research Intern at UofT</p>
+							<div class="jobDescription">
+								<p class="largeText">Ready Lab</p>
+								<p class="smallText">Undergraduate research assistant at University of Toronto's ReadyLab</p>
+								<p class="smallText">May 2023 to August 2023</p>
+								<p class="mediumText">• Led fully funded research project on a case-study of open-source approach greatly benefiting high school robotics (FRC) teams, while drawing parallels to university design teams and applications in industry</p>
+								<p class="mediumText">• Developed programming, statistics, survey, communication, and project management skills over 16 weeks</p>
+							</div>
+							<div class="linksBar">
+								<a href="https://readylab.mie.utoronto.ca" target="_blank">
+									<span class="icon-desktop"></span>
 								</a>
 							</div>
 						</div>
@@ -387,7 +219,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 			<!--=============== Footer ===============-->
 			<!--=============== ====== ===============-->
 			<div id="logo">
-				<img id="mainLogo" src="icons/Logo_Large.png"/>
+				<img id="mainLogo" src="assets/icons/Logo_Large.jpg"/>
 			</div>
 			<section id="footer">
 				<div class="footerButton footerIcon active"></div>
@@ -395,7 +227,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: October 8th, 2024</p>
+				<p id="lastModified">Last Updated: October 13th, 2024</p>
 			</section>
 		<div>
 	</main>
