--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformDescription">
 								<p class="largeText">McGill Drone and Vertical Flight Society</p>
 								<p class="smallText">Fall 2022 to Present</p>
-								<p class="mediumText">Captain of the drone design team at McGill, creating an autonomous UAV to compete against other Canadian Universities with over 150 members.</p>
+								<p class="mediumText">Responsible for high level technical direction of 157 team members, team organisation, and securing funding</p>
+								<p class="mediumText">Gained experience in all aspects of drone design through both own projects and giving feedback to teammates</p>
+								<p class="mediumText">Created innovative drone landing gear for tail-sitter eVTOL design that scored 3rd at annual competition</p>
+								<p class="mediumText"></p>
 							</div>
 							<div class="linksBar">
 								<a href="https://mcgilldronesandverticalflightsociety.com" target="_blank">
@@ -100,7 +103,8 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformDescription">
 								<p class="largeText">Baja Pedals Subteam Lead</p>
 								<p class="smallText">Fall 2022 to Spring 2023</p>
-								<p class="mediumText">Developed first metal 3D printed parts used on car and utilized a systems engineering approach</p>
+								<p class="mediumText">Implemented system design approach and led a team in creating first metal 3D printed parts used on car</p>
+								<p class="mediumText">Reduced total subsystem weight by 46% and part count by 30% through transition to metal 3D printing and carbon-fiber footrest</p>
 							</div>
 							<div class="linksBar">
 								<a href="https://baja.mcgilleus.ca" target="_blank">
