--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 	<link rel="shorcut icon" href="icons/Logo_Small.png"/>
 	<link rel="stylesheet" type="text/css" href="src/styles/style.css"/>
 	
+	<link rel="icon" href="/assets/icons/Logo_Favicon_64.jpg" type="image/jpg">
+
 	<meta name="description" content="Official website for the portfolio of Alex Lyakishev"/>
 	<meta name="keywords" content="Alex Lyakishev, Alexander Lyakishev, McGill University, McGill Engineering, McGill, Mechanical Engineering"/>
 	<meta name="author" content="Alex Lyakishev"/>
