edited contact form

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						    <input id="formSubmit" class="icon" type="submit" value="Send">
 						</form>
 					</div>
-					<a href="src/documents/WachterFrederick_EngrResume.pdf" id="resumeButton" download>Click for Resume</a>
+					<a href="" id="resumeButton" download>Click for Resume</a>
 				</div>
 			</section>
 			
