added MDVFS github link

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 								<a href="https://mcgilldronesandverticalflightsociety.com" target="_blank">
 									<span class="icon-desktop"></span>
 								</a>
+								<a href="https://github.com/McGill-Drones-and-Vertical-Flight" target="_blank">
+									<span class="icon-github"></span>
+								</a>
 							</div>
 						</div>
 						<div class="platform">
