Removed contact me page

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						<div class="spacer"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">About Me</p>
-							<p class="pageText" style="text-align:left;">I am a 3rd year Mechanical Engineering with primary interest in additive manufacturing, robotic systems, and novel design methodologies.</p>
-							<p class="pageText" style="text-align:left;">I am currently working on my Mechanical Engeering degree from McGill University.</p>
+							<p class="pageText" style="text-align:left;">I am a 3rd year Mechanical Engineering student at McGill with primary interest in additive manufacturing, robotic systems, and novel design methodologies.</p>
 							<p class="pageText" style="text-align:left;">This website provides an overview of various work experiences, projects, and related activities that I have done.</p> 
+							<p class="pageText" style="text-align:left;">Feel free to reach out through my LinkedIn on the right!</p> 
+
 						</div>
 						<div class="spacer" style="height:60px;"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">Projects</p>
-							<p class="pageText" style="text-align:left;">Below is a list of projects that I have worked on along with descriptions and relevant links.
 						</div>
 						<div class="spacer"></div>
 						<div class="platform">
@@ -203,6 +203,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 					</div>
 				</div>
 			</section>
+			<!--
 			<section id="page3" class="page">
 				<div class="no_tint">
 					<div id="contentPage4" class="center">
@@ -213,16 +214,17 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						    <input id="userName" placeholder="Name" type="text" name="name" required>
 						    <input id="userEmail" placeholder="Email" type="email" name="_replyto" required>
 						    <textarea id="userMessage" placeholder="Message" rows="4" width="100"></textarea>
-						    <!-- Configureations -->
+						    Configureations
 						    <input type="hidden" name="_cc" value="alexander.lyakishev@outlook.com">
 						    <input type="hidden" name="_subject" value="Personal Website Contact Request">
-							<!-- Submission -->
+							Submission
 						    <input id="formSubmit" class="icon" type="submit" value="Send">
 						</form>
 					</div>
 					<a href="" id="resumeButton" download>Click for Resume</a>
 				</div>
 			</section>
+			-->
 			
 			<!--=============== ====== ===============-->
 			<!--=============== Footer ===============-->
@@ -234,9 +236,8 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 				<div class="footerButton footerIcon active"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
-				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: October 13th, 2024</p>
+				<p id="lastModified">Last Updated: October 16th, 2024</p>
 			</section>
 		<div>
 	</main>
