Added Wind Direction Project

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 						<div class="spacer"></div>
 						<div id="aboutMeDescription" class="black_out">
 							<p class="pageTitle">About Me</p>
-							<p class="pageText" style="text-align:left;">I am a 3rd year Mechanical Engineering student at McGill with primary interest in additive manufacturing, robotic systems, and novel design methodologies.</p>
+							<p class="pageText" style="text-align:left;">I am a 3rd year Mechanical Engineering student at McGill with a primary interest in additive manufacturing, robotic systems, and novel design methodologies.</p>
 							<p class="pageText" style="text-align:left;">This website provides an overview of various work experiences, projects, and related activities that I have done.</p> 
 							<p class="pageText" style="text-align:left;">Feel free to reach out through my LinkedIn on the right!</p> 
 
@@ -70,9 +70,31 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformDescription">
 								<p class="largeText">McGill Drone and Vertical Flight Society</p>
 								<p class="smallText">Fall 2022 to Present</p>
-								<p class="mediumText">Responsible for high level technical direction of 157 team members, team organisation, and securing funding</p>
+								<p class="mediumText">Responsible for high level technical direction of 136 team members, team organisation, and securing funding</p>
 								<p class="mediumText">Gained experience in all aspects of drone design through both own projects and giving feedback to teammates</p>
-								<p class="mediumText">Created innovative drone landing gear for tail-sitter eVTOL design that scored 3rd at annual competition</p>
+								<p class="mediumText">Created innovative drone landing gear for tail-sitter electric VTOL design that scored 3rd at annual competition</p>
+								<p class="mediumText"></p>
+							</div>
+							<div class="linksBar">
+								<a href="https://mcgilldronesandverticalflightsociety.com" target="_blank">
+									<span class="icon-desktop"></span>
+								</a>
+								<a href="https://github.com/McGill-Drones-and-Vertical-Flight" target="_blank">
+									<span class="icon-github"></span>
+								</a>
+							</div>
+						</div>
+						<div class="platform">
+							<div class="platformImage">
+								<div id="platform_background_vfs_wind_direction" class="background"></div>
+							</div>
+							<p class="blockTitle">On-drone wind direction and speed sensor</p>
+							<div class="platformDescription">
+								<p class="largeText">Head of On-Drone Wind Direction and Speed Sensor Project</p>
+								<p class="smallText">Fall 2024 to Present</p>
+								<p class="mediumText">Head of project with 5 members to implement a system of pressure sensors on board the drone to monitor the wind speed and direction while in vertical flight.</p>
+								<p class="mediumText">The system works by curve fitting pressure readings to known air pressure distribution around a cylinder.</p>
+								<p class="mediumText">Gained experience with: fluid dynamics, machine learning, jetson nano microcomputer, electronic sensors and other hardware.</p>
 								<p class="mediumText"></p>
 							</div>
 							<div class="linksBar">
@@ -108,8 +130,8 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformDescription">
 								<p class="largeText">Baja Pedals Subteam Lead</p>
 								<p class="smallText">Fall 2022 to Spring 2023</p>
-								<p class="mediumText">Implemented system design approach and led a team in creating first metal 3D printed parts used on car</p>
-								<p class="mediumText">Reduced total subsystem weight by 46% and part count by 30% through transition to metal 3D printing and carbon-fiber footrest</p>
+								<p class="mediumText">Implemented system design approach to categorize entire pedals subsystem, and led a team in creating first metal 3D printed parts used on car</p>
+								<p class="mediumText">Reduced the total subsystem weight by 46% and part count by 30% through transition to metal 3D printing and carbon-fiber footrest</p>
 							</div>
 							<div class="linksBar">
 								<a href="https://baja.mcgilleus.ca" target="_blank">
