Added main photo

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 							<div class="platformDescription">
 								<p class="largeText">Head of On-Drone Wind Direction and Speed Sensor Project</p>
 								<p class="smallText">Fall 2024 to Present</p>
-								<p class="mediumText">Head of project with 5 members to implement a system of pressure sensors on board the drone to monitor the wind speed and direction while in vertical flight.</p>
+								<p class="mediumText">Head of project with 5 members to implement a system of pressure sensors on board a tail-sitter drone to monitor the wind speed and direction while in vertical flight.</p>
 								<p class="mediumText">The system works by curve fitting pressure readings to known air pressure distribution around a cylinder.</p>
 								<p class="mediumText">Gained experience with: fluid dynamics, machine learning, jetson nano microcomputer, electronic sensors and other hardware.</p>
 								<p class="mediumText"></p>
@@ -259,7 +259,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 				<div class="footerButton icon footerIcon notActive"></div>
 				<div class="footerButton icon footerIcon notActive"></div>
 				<p id="footerText">Home</p>
-				<p id="lastModified">Last Updated: October 16th, 2024</p>
+				<p id="lastModified">Last Updated: November 24th, 2024</p>
 			</section>
 		<div>
 	</main>
