Added proper scroll functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ PURPOSE: Engineering Portfolio of Alex Lyakishev
 	
 	<!-- <header></header> -->
 	
-	<main>
+	<main tabindex="0">
 		<div>
 			<!--=============== ======= ===============-->
 			<!--=============== Sidebar ===============-->
